fix colorbar scaling issue on Safari

--- a/src/app/containers/visualizer/components/menus/menu.scss
+++ b/src/app/containers/visualizer/components/menus/menu.scss
@@ -41,6 +41,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		flex-wrap: wrap;
 		&--margin {
 			margin-bottom: 0.5rem;
 		}
